--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "phpunit/phpunit": "3.7.*"
   },
   "require": {
-    "symfony/http-foundation": "^2.7"
+    "symfony/http-foundation": "^2.7",
+    "symfony/routing": "^2.7"
   }
 }
